# wisper

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  settings.html  vite.config.ts
.github/workflows/: release.yml
.tauri/: update.key.pub
docs/: PRD.md  humans.txt  index.html  llms.txt  robots.txt  script.js  sitemap.xml  styles.css
electron/: main.cjs  preload.cjs
landing-page/: index.html  package.json
public/: overlay.css  overlay.html
src/: App.tsx  index.css  settings.tsx  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  coordinator.rs  engine.rs  history.rs  hotkey.rs  lib.rs  llm.rs  main.rs  models.rs  paste.rs  process.rs  settings.rs  stt.rs  vocab.rs  whisper_keys.rs  words.rs
src/components/: AboutTab.tsx  ConfirmModal.tsx  DonateTab.tsx  EngineTab.tsx  Field.tsx  GeneralTab.tsx  HistoryItem.tsx  HistoryTab.tsx  LLMTab.tsx  ModelCard.tsx  Onboarding.tsx  PasteTab.tsx  PillGroup.tsx  ProcessTab.tsx  RecordingBar.tsx  RecordingIndicator.tsx  ResetButton.tsx  STTTab.tsx  SectionCard.tsx  Select.tsx  Settings.tsx  Sidebar.tsx  Switch.tsx  Toast.css  Toast.tsx  ToastContext.tsx  Transcript.tsx  TranscriptionDisplay.tsx  UpdateBanner.tsx  VocabTab.tsx  VocabularyManager.tsx  Waveform.tsx  WisperLogo.tsx  WordsManager.tsx  WordsTab.tsx
src/hooks/: useAudioRecorder.ts
