[package]
name = "wisper"
version = "3.0.0"
description = "Turn your voice into text right on your device, with your privacy always in your hands."
authors = ["Tarak Shaw <taraksh01@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.18.1"
hound = "3.5.1"
rubato = "3.0.0"
rodio = "0.22.2"
rdev = "0.5.3"
futures-util = "0.3"
reqwest = { version = "0.13.4", features = ["blocking", "json", "multipart", "stream"] }
tokio = { version = "1.52.3", features = ["full"] }
dirs = "6.0.0"
arboard = "3.6.1"
enigo = "0.6.1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
once_cell = "1.21.4"
transcribe-rs = { version = "0.3.11", features = ["onnx"] }
tar = "0.4"
flate2 = "1"

